## Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS = 1.4 foreign

# A list of all the files in the current directory which can be regenerated
MAINTAINERCLEANFILES = Makefile.in				

EXTRA_DIST = README cam_bookmarks feh-cam gen-cam-menu

camdir = $(bindir)
cam_SCRIPTS = feh-cam gen-cam-menu
