## Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS = 1.4 foreign

# A list of all the files in the current directory which can be regenerated
MAINTAINERCLEANFILES = Makefile.in				

testfonts_DATA = \
menu.style black.style yudit.ttf

testfontsdir=$(prefix)/share/feh/fonts

EXTRA_DIST = $(testfonts_DATA)
